<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"

    android:columnCount="3"
    android:orientation="horizontal"

    android:rowCount="10"  >
    <!--rowcount 最大行数-->

    <TextView
        android:text="@string/identity_tv1"
        android:layout_marginLeft="30dp"
        android:textColor="@color/teal_200"
        android:textSize="75sp">
    </TextView>

    <TextView
        android:text="@string/identity_tv2"
        android:layout_marginLeft="30dp"
        android:textColor="@color/teal_200"
        android:textSize="75sp">
    </TextView>
    <TextView
        android:text="@string/identity_tv3"
        android:layout_marginLeft="30dp"
        android:textColor="@color/teal_200"
        android:textSize="75sp">
    </TextView>

    <TextView
        android:text="@string/identity_name1"
        android:layout_marginLeft="30dp"
        android:textSize="75sp">
    </TextView>

    <TextView
        android:text="@string/identity_num1"
        android:layout_marginLeft="30dp"
        android:textSize="75sp">
    </TextView>

    <TextView
        android:text="@string/identity_qiandao1"
        android:layout_marginLeft="30dp"
        android:textSize="75sp">
    </TextView>

    <TextView
        android:text="@string/identity_name2"
        android:layout_marginLeft="30dp"
        android:textSize="75sp">
    </TextView>

    <TextView
        android:text="@string/identity_num2"
        android:layout_marginLeft="30dp"
        android:textSize="75sp">
    </TextView>

    <TextView
        android:text="@string/identity_qiandao1"
        android:layout_marginLeft="30dp"
        android:textSize="75sp">
    </TextView>





</GridLayout>