<?xml version="1.0" encoding="utf-8"?>

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MainActivity">
    <!--标题 -->

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="250dp"
            android:layout_marginRight="250dp"
            android:layout_marginTop="10dp"
            android:text="@string/act_tool"
            android:textSize="50sp" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="350dp"
            android:layout_marginTop="30dp"
            android:text="@string/tool_tv1"
            android:textSize="30sp" />

        <EditText
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textSize="20sp"
            android:minWidth="300dp"/>
    </TableRow>
    <!--第二行 学生学号-->
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="30dp"
            android:text="@string/tool_tv2"
            android:textSize="30sp" />

        <EditText
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textSize="20sp"
            android:minWidth="300dp"/>
    </TableRow>
    <!--    第三行 座位号-->
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="30dp"
            android:text="@string/tool_tv3"
            android:textSize="30sp" />

        <EditText
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textSize="20sp"
            android:minWidth="300dp"/>
    </TableRow>
    <!--    第四行 报修设备-->
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="30dp"
            android:text="@string/tool_tv4"
            android:textSize="30sp" />

        <EditText
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textSize="20sp"
            android:minWidth="300dp"/>
    </TableRow>
    <!--    第五行 报修原因-->
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="30dp"
            android:text="@string/tool_tv5"
            android:textSize="30sp" />

        <EditText
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textSize="20sp"
            android:minWidth="300dp"/>
    </TableRow>



    <Button
        android:id="@+id/tool_b1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50sp"
        android:layout_marginLeft="250sp"
        android:layout_marginRight="250sp"
        android:text="@string/tool_button1"
        android:textSize="50sp" />


</TableLayout>


